add css to html skeleton

--- a/index.html
+++ b/index.html
@@ -5,24 +5,30 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Document</title>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
  <header>
   <nav>
-   <span> <h1>Header logo</h1></span>
-   <ul>
-    <li>Header link1</li>
-    <li>Header link2</li>
-    <li>Header link 3</li>
-   </ul>
+   <div>
+    <span> <h1>Header logo</h1></span>
+   </div>
+   <div class="linkH">
+    <ul>
+     <li>Header link1</li>
+     <li>Header link2</li>
+     <li>Header link 3</li>
+    </ul>
+   </div>
   </nav>
   <div class="container">
    <div class="awse">
     <h2>This website is awsome</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo laboriosam earum fuga consequatur adipisci.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nemo laboriosam.</p>
+    <button class="signP">sign up</button>
    </div>
    <div class="placeH">
-
+    <p>This is place holder of image</p>
    </div>
   </div>
  </header>
@@ -33,24 +39,24 @@
    </div>
    <div class="squares">
     <div class="square1">
-     <p>Hey</p>
-     <p>This is Some solvet under an illumantion of image</p>
+     <p class="heyP"></p>
+     <p>This is Some <br> solvet under an <br> illumantion of image</p>
     </div>
     <div class="square1">
-     <p>Hey</p>
-     <p>This is Some solvet under an illumantion of image</p>
+     <p class="heyP"></p>
+     <p>This is Some <br> solvet under an <br> illumantion of image</p>
     </div>
     <div class="square1">
-     <p>Hey</p>
-     <p>This is Some solvet under an illumantion of image</p>
+     <p class="heyP"></p>
+     <p>This is Some <br> solvet under an <br> illumantion of image</p>
     </div>
     <div class="square1">
-     <p>Hey</p>
-     <p>This is Some solvet under an illumantion of image</p>
+     <p class="heyP"></p>
+     <p>This is Some <br> solvet under an <br> illumantion of image</p>
     </div>
    </div>
    <div class="quote">
-    <p>This is inspiring quote or testimanal from a  customer. Maybe  it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+    <p>This is inspiring quote or testimanal from a  customer. <br> Maybe it's just filling up space, or maybe <br> people will actually read it. Who knows? All I know <br> is that it looks nice.</p>
     <h6>Thor, god of thurder</h6>
    </div>
   </div>
@@ -64,6 +70,9 @@
    <div>
     <button>Signup</button>
    </div>
+  </div>
+  <div class="copy">
+   <p>copyright &copy; The odin Project 2021</p>
   </div>
  </footer>
 </body>
